--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="stars"></div>
             <div class="twinkling"></div>
             <div id="typewriter-container">
-                <h1 class="huge-text" id="huge-text">Your Huge Text Here!</h1>
+                <h1 class="huge-text" id="huge-text"Immortal Identification Zone/h1>
             </div>
         </div>
     </body>
