--- a/index.html
+++ b/index.html
@@ -1,44 +1,16 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-		<style>
-            .huge-text {
-				font-size: 4rem;
-				font-weight: bold;
-				color: white;
-				white-space: nowrap;
-				overflow: hidden;
-				border-right: .15em solid transparent;
-				animation: type 12s steps(60, end), blinking-cursor .75s step-end infinite;
-			}
-			@keyframes type {
-				0% {
-					width: 0;
-				}
-				50% {
-					border-color: transparent;
-				}
-				100% {
-					width: 100%;
-				}
-			}
-			@keyframes blinking-cursor {
-				from, to {
-					border-color: transparent;
-				}
-				50% {
-					border-color: white;
-				}
-			}
-        </style>
-    </head>
-    <body>
-        <div id="background">
-            <div class="stars"></div>
-            <div class="twinkling"></div>
-            <div id="typewriter-container">
-                <h1 class="huge-text" id="huge-text">Immortal Identification Zone</h1>
-            </div>
-        </div>
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="animation.js"></script>
+  </head>
+  <body>
+    <div id="background">
+      <div class="stars"></div>
+      <div class="twinkling"></div>
+      <div id="typewriter-container" class="centered">
+        <h1 class="huge-text" id="huge-text">Your Huge Text Here!<span></span></h1>
+      </div>
+    </div>
+  </body>
 </html>
