--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="animation.js"></script>
   </head>
   <body>
     <div id="background">
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div id="typewriter-container" class="centered">
-        <h1 class="huge-text" id="huge-text">Your Huge Text Here!<span></span></h1>
+        <h1 class="huge-text">Your Huge Text Here!<span>|</span></h1>
       </div>
     </div>
   </body>
