--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div id="typewriter-container" class="centered">
-        <h1 class="huge-text">Your Huge Text Here!<span>|</span></h1>
+        <h1 class="huge-text">IIZ:Immortal Identification Zone<span>|</span></h1>
       </div>
     </div>
   </body>
